samples/_failures_safe/1761202617_7da23d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ba49c070.c: In function ‘main’:
./samples/SAFE/__tmp_ba49c070.c:157:30: error: missing terminating " character
  157 |         input[strcspn(input, "\
      |                              ^~
./samples/SAFE/__tmp_ba49c070.c:157:9: error: expected expression at end of input
  157 |         input[strcspn(input, "\
      |         ^~~~~
./samples/SAFE/__tmp_ba49c070.c:157:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ba49c070.c:157:9: error: expected declaration or statement at end of input
